// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`translation verify should fail under strict when translations are missing 1`] = `
{
  "exitCode": 3,
  "stderr": [
    "Translation key missing: st_medkit_name fra in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name fra in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ger in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name ger in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ita in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name ita in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name pol in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name pol in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name spa in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name spa in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ukr in <resources>/translations/st_items.json",
    "Translation key missing: st_ui_start fra in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit fra in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start ger in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit ger in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start ita in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit ita in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start pol in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit pol in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start rus in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit rus in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start spa in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit spa in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit ukr in <resources>/translations/st_ui.json",
    "Check failed: 24 finding(s)",
  ],
  "stdout": [
    "Verifying translation <resources>/translations, language - all",
    "Verifying dir <resources>/translations",
    "Verified translation files in <duration>, 4 checked, 24 missing",
  ],
}
`;

exports[`translation verify should find nothing missing in a complete language 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Verifying translation <resources>/translations, language - eng",
    "Verifying dir <resources>/translations",
    "Verified translation files in <duration>, 4 checked, 0 missing",
  ],
}
`;

exports[`translation verify should report gaps across every language 1`] = `
{
  "exitCode": 0,
  "stderr": [
    "Translation key missing: st_medkit_name fra in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name fra in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ger in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name ger in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ita in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name ita in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name pol in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name pol in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name spa in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name spa in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ukr in <resources>/translations/st_items.json",
    "Translation key missing: st_ui_start fra in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit fra in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start ger in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit ger in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start ita in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit ita in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start pol in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit pol in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start rus in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit rus in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start spa in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit spa in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit ukr in <resources>/translations/st_ui.json",
  ],
  "stdout": [
    "Verifying translation <resources>/translations, language - all",
    "Verifying dir <resources>/translations",
    "Verified translation files in <duration>, 4 checked, 24 missing",
  ],
}
`;

exports[`translation verify should report the gaps it found 1`] = `
{
  "command": [
    "translation",
    "verify",
  ],
  "duration": "<duration>",
  "error": null,
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "checkedTranslationsCount": 4,
    "checks": [
      {
        "duration": "<duration>",
        "findings": [
          {
            "message": "Missing translation for key 'st_bread_name' in language 'fra'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_bread_name' in language 'ger'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_bread_name' in language 'ita'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_bread_name' in language 'pol'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_bread_name' in language 'spa'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'fra'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'ger'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'ita'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'pol'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'spa'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_medkit_name' in language 'ukr'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_items.json",
          },
          {
            "message": "Missing translation for key 'st_ui_quit' in language 'fra'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_quit' in language 'ger'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_quit' in language 'ita'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_quit' in language 'pol'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_quit' in language 'rus'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_quit' in language 'spa'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_quit' in language 'ukr'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_start' in language 'fra'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_start' in language 'ger'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_start' in language 'ita'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_start' in language 'pol'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_start' in language 'rus'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_ui.json",
          },
          {
            "message": "Missing translation for key 'st_ui_start' in language 'spa'",
            "ruleId": "translations.missing",
            "subject": "<resources>/translations/st_ui.json",
          },
        ],
        "id": "translations",
        "status": "failed",
      },
    ],
    "duration": "<duration>",
    "missingTranslationsCount": 24,
    "status": "failed",
  },
}
`;

exports[`translation verify should write a structured report 1`] = `
{
  "exitCode": 0,
  "stderr": [
    "Translation key missing: st_medkit_name fra in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name fra in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ger in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name ger in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ita in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name ita in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name pol in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name pol in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name spa in <resources>/translations/st_items.json",
    "Translation key missing: st_bread_name spa in <resources>/translations/st_items.json",
    "Translation key missing: st_medkit_name ukr in <resources>/translations/st_items.json",
    "Translation key missing: st_ui_start fra in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit fra in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start ger in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit ger in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start ita in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit ita in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start pol in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit pol in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start rus in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit rus in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_start spa in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit spa in <resources>/translations/st_ui.json",
    "Translation key missing: st_ui_quit ukr in <resources>/translations/st_ui.json",
  ],
  "stdout": [
    "Verifying translation <resources>/translations, language - all",
    "Verifying dir <resources>/translations",
    "Verified translation files in <duration>, 4 checked, 24 missing",
  ],
}
`;

exports[`translation verify should write only the report 1`] = `
[
  {
    "path": "report.json",
    "sha256": "ecd6620051f64e813868da1dd411c6506c52627ace69aefac2626da7c07967db",
    "size": 5731,
  },
]
`;
